crates/edm-core/tests/snapshots/views__trade_log_w200.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== TRADES  3 requests over 2 rounds — hold is full =====================================================================================================================================================
+---+-----------------+-----+-------+---------+------+---------+
| # | Commodity       | Qty |  Unit |   Total | HTTP |   Cargo |
+===+=================+=====+=======+=========+======+=========+
| 1 | Gold            |  13 | 9,301 | 120,913 |  200 | 121/256 |
| 1 | Basic Narcotics |   0 | 1,120 |       0 |    - |       - |
| 2 | Hydrogen Fuel   |   8 |   110 |     880 |  402 | 121/256 |
+---+-----------------+-----+-------+---------+------+---------+
|   | TOTAL           |  21 |       | 121,793 |      | 121/256 |
+---+-----------------+-----+-------+---------+------+---------+
   credits now 12,345,678
== INVENTORY  3 items ==================================================================================================================================================================================
+-----------------+-----+-----------+---+--------+-----------+------------+----------------------------+
| Commodity       | Qty |     Value | S | Marked |     Owner |     Origin | Position (x / y / z)       |
+=================+=====+===========+===+========+===========+============+============================+
| Gold            | 117 | 1,088,217 | . |      - |         0 | 3223343616 | -9530.7 / -910.3 / 19808.1 |
| Basic Narcotics |   4 |     4,404 | S |      1 | 128000000 |          0 | -                          |
| ?               |   - |         - | . |      - |         0 |          0 | -                          |
+-----------------+-----+-----------+---+--------+-----------+------------+----------------------------+
